Added GitHub/Weather-App Repository link

--- a/index.html
+++ b/index.html
@@ -91,10 +91,8 @@
         </div>
       </div>
     </div>
-
-
-     
     </div>
+    <a href="https://github.com/hnusratullah/weather-app" class="githubLink">Open-source code</a> by Hana Nusratullah
     <script src="src/script.js">
 
     </script>
