Moved search-function inside weatherapp div

--- a/index.html
+++ b/index.html
@@ -18,37 +18,39 @@
 </head>
   <body>
     <div class="container">
-      <div class= "search-function">
-      <form class ="search-form" id="search-form">
-          <div class="row">
-              <div class="col-5">
-        <input 
-        type="search" 
-        placeholder="Search City" 
-        autofocus="on"
-        autocomplete="off"
-        id = "search-City" 
-        class ="form-control"/>
-         </div>
-            <div class="col-lg-2">
-        <input
-                type="submit"
-                value="Search"
-                class="form-control btn btn-primary"
-              />
-            </div>
-          <div class="col col-lg-2">
-              <input
-              type="button"
-              value="Current Location"
-              class="btn btn-secondary" 
-              id = "current-Location" />
-
-          </div>
-        </div>
-      </form>
-
       <div class="weatherapp">
+        <div class= "search-function">
+          <form class ="search-form" id="search-form">
+              <div class="row">
+                  <div class="col-lg-4">
+            <input 
+            type="search" 
+            placeholder="Search City" 
+            autofocus="on"
+            autocomplete="off"
+            id = "search-City" 
+            class ="form-control"/>
+             </div>
+                <div class="col-lg-4">
+            <input
+                    type="submit"
+                    value="Search"
+                    class="form-control btn btn-primary"
+                    id="search-Button"
+                  />
+                </div>
+              <div class="col-lg-4">
+                  <input
+                  type="button"
+                  value="Current Location"
+                  class="btn btn-secondary" 
+                  id = "current-Location" />
+    
+              </div>
+            </div>
+          </form>
+
+
         <h1>Houston</h1>
         <div class = "dayTime"> Day Time </div>
         <div class="row">
