Added small around open source code line

--- a/index.html
+++ b/index.html
@@ -93,8 +93,12 @@
         </div>
       </div>
     </div>
-    </div>
-    <a href="https://github.com/hnusratullah/weather-app" class="githubLink">Open-source code</a> by Hana Nusratullah
+   <small>
+    <a href="https://github.com/hnusratullah/weather-app" class="githubLink">Open-source code</a> 
+    
+    by Hana Nusratullah
+
+   </small> 
     <script src="src/script.js">
 
     </script>
