Added div to move open source link outside of container

--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
         </div>
       </div>
     </div>
+    </div>
+    </div>
    <small>
     <a href="https://github.com/hnusratullah/weather-app" class="githubLink">Open-source code</a> 
     
