changed div class current weather

--- a/index.html
+++ b/index.html
@@ -55,15 +55,13 @@
         <div class = "dayTime"> Day Time </div>
         <div class="row">
           <div class="col-6">
-            <h2>
-              Rain <br />
-              <div class="mainicon">🌧</div>
-            </h2></div>
-          <div class="col-6" >
-            <h3>17</h3>
-   
-             <a href="#" id="celcius-link"><span class="unit" id="celcius">°C |</span></a>
-             <a href="#" id="farenheit-link"><span class="unit" id="farenheit">°F</span></a>          
+            <div class="current-weather">
+              Rain</div>
+              <div class="weather-icon">🌧</div></div>
+          <div class="col-6">
+            <div class="current-temperature">17</div> <span class="unit">
+             <a href="#" id="celcius-link"><span id="celcius">°C</span></a> |
+             <a href="#" id="farenheit-link"><span id="farenheit">°F</span></a> </span>         
            
             <div class="row justify-content-center">
                 <div class="col-auto"> Wind: <span id = "wind">  </span></div>
@@ -95,14 +93,14 @@
     </div>
     </div>
     </div>
-   <small>
-    <a href="https://github.com/hnusratullah/weather-app" class="githubLink">Open-source code</a> 
-    
-    by Hana Nusratullah
-
-   </small> 
+    <div class="open-source-code">
+      <small>
+        <a href="https://github.com/hnusratullah/weather-app" class="githubLink">Open-source code</a> 
+        by Hana Nusratullah
+       </small> 
+    </div>
+   
     <script src="src/script.js">
-
     </script>
   </body>
 </html>
