added weather icon src and id

--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
           <div class="col-6">
             <div class="current-weather">
               Rain</div>
-              <div class="weather-icon">🌧</div></div>
+              <div class="weather-icon" id="weather-icon">
+                <img src="" id="icon-source"/>
+
+              </div></div>
           <div class="col-6">
             <div class="current-temperature">17</div> <span class="unit">
              <a href="#" id="celcius-link"><span id="celcius">°C</span></a> |
