fixed default search city API

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class= "search-function">
           <form class ="search-form" id="search-form">
               <div class="row">
-                  <div class="col-lg-4">
+                  <div class="col-6">
             <input 
             type="search" 
             placeholder="Search City" 
@@ -31,7 +31,7 @@
             id = "search-City" 
             class ="form-control"/>
              </div>
-                <div class="col-lg-4">
+                <div class="col-3">
             <input
                     type="submit"
                     value="Search"
@@ -39,7 +39,7 @@
                     id="search-Button"
                   />
                 </div>
-              <div class="col-lg-4">
+              <div class="col-3">
                   <input
                   type="button"
                   value="Current Location"
