implemented the unit conversion

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 
               </div></div>
           <div class="col-6">
-            <div class="current-temperature">17</div> <span class="unit">
+            <div class="current-temperature"></div> <span class="unit">
              <a href="#" id="celcius-link"><span id="celcius">°C</span></a> |
-             <a href="#" id="farenheit-link"><span id="farenheit">°F</span></a> </span>         
+             <a href="#" id="farenheit-link" class ="active"><span id="farenheit">°F</span></a> </span>         
            
             <div class="row justify-content-center">
                 <div class="col-auto"> Wind: <span id = "wind">  </span></div>
