--- a/index.html
+++ b/index.html
@@ -76,17 +76,7 @@
         <div>
      </div>
 
-    <div class="weather-forecast">
-      <div class="row">
-        <div class="col-2">
-          <div class="weather-forecast-date"> Mon </div>
-          <img src="http://openweathermap.org/img/wn/01n@2x.png" width="80"/>
-          <div class="weather-forecast-temperature">
-            <span class="weather-forecast-temperature-max">80° </span>
-            <span class="weather-forecast-temperature-min"> 18° </span>
-          </div>
-         </div>
-      </div>
+    <div class="weather-forecast" id="forecast">
     </div> 
     
    </div>
