Put Farenheit link first, then Celcius

--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
             </div>
           <div class="col-4">
             <div class="current-temperature"></div> <span class="unit">
-             <a href="#" id="celcius-link"><span id="celcius"> °C</span></a> |
-             <a href="#" id="farenheit-link" class ="active"><span id="farenheit">°F</span></a> </span> 
+              <a href="#" id="farenheit-link" class ="active"><span id="farenheit">°F </span></a>|
+              <a href="#" id="celcius-link"><span id="celcius"> °C</span></a>
+              </span> 
              </div>        
           <div class="col-4">
               <div class="wind-humidity">
