Removed celcius conversion

--- a/index.html
+++ b/index.html
@@ -61,10 +61,7 @@
               </div>
             </div>
           <div class="col-4">
-            <div class="current-temperature"></div> <span class="unit">
-              <a href="#" id="farenheit-link" class ="active"><span id="farenheit">°F </span></a>|
-              <a href="#" id="celcius-link"><span id="celcius"> °C</span></a>
-              </span> 
+            <div class="current-temperature"></div> <span class="unit" id="farenheit"> °F </span>
              </div>        
           <div class="col-4">
               <div class="wind-humidity">
